feat(book): filter method added to BookController and book api finished